tests/predator-regre/test-0222.err
test-0222.c:10:20: note: writing heap graph to 'test-0222.c-10-0000.dot'...
test-0222.c:10:20: note: writing heap graph to 'test-0222.c-10-0001.dot'...
test-0222.c:16:31: error: dereference of already deleted heap object
test-0222.c:58:12: note: from call of destroy()
test-0222.c:32:5: note: from call of main()
test-0222.c:10:20: note: writing heap graph to 'test-0222.c-10-0002.dot'...
test-0222.c:16:31: error: dereference of already deleted heap object
test-0222.c:58:12: note: from call of destroy()
test-0222.c:32:5: note: from call of main()
test-0222.c:10:20: note: writing heap graph to 'test-0222.c-10-0003.dot'...
test-0222.c:16:31: error: dereference of already deleted heap object
test-0222.c:58:12: note: from call of destroy()
test-0222.c:32:5: note: from call of main()
test-0222.c:10:20: note: writing heap graph to 'test-0222.c-10-0004.dot'...
test-0222.c:16:31: error: dereference of already deleted heap object
test-0222.c:58:12: note: from call of destroy()
test-0222.c:32:5: note: from call of main()
test-0222.c:10:20: note: writing heap graph to 'test-0222.c-10-0005.dot'...
test-0222.c:16:31: error: dereference of already deleted heap object
test-0222.c:58:12: note: from call of destroy()
test-0222.c:32:5: note: from call of main()
test-0222.c:5:1: warning: memory leak detected while destroying a static variable
